[tool.poetry]
name = "pi-optimal"
version = "0.1.0"
description = "Python package for easy, data-efficient RL-based decision-making in business applications."
authors = [{ name = "pi-optimal UG (haftungsbeschränkt)", email = "hello@pi-optimal.com" }]
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
keywords = [ "rl", "decision intelligence", "reinforcement learning", "decision-making", "pi", "optimal" ]


[project.urls]
homepage = "https://pi-optimal.com/"
repository = "https://github.com/pi-optimal/pi-optimal"
documentation = "https://pi-optimal.com/docs/getting-started"

maintainers = [
    { name = "Jochen Luithardt", email = "jol@pi-optimal.com>" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.25.0"
swig = "^4.3.0"
jupyter = {version = "^1.0.0", optional = true}
torch = "^2.2.0"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
gymnasium = "^1.0.0"
matplotlib = "^3.9.1.post1"
ipywidgets = "^8.1.5"
ipysheet= "^0.7.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
mypy = "^1.11.1"
wandb = "^0.17.5"
pandas-stubs = "^2.2.2.240603"
types-tqdm = "^4.66.0.20240417"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.3.0"
sphinx-autobuild = "^2024.4.16"
sphinxawesome-theme = "^5.2.0"


[tool.poetry.extras]
notebook = ["jupyter", "ipykernel"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
